{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "4cdb5be2-0a26-4633-9007-5508bce76eee",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "18dc27bc-1221-448f-99c5-b9571ae19d8f",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "997c237f-d456-4efb-b1b2-24c706f41d9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "touchPosition",
                    "type": "PassThrough",
                    "id": "973ee481-7a86-4024-802c-797300592e0d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b9f033fa-a3ef-46b9-b999-04dd319fc40b",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c4583c5-d474-4a16-af4f-ce41adacffb9",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e503dc6-d469-4ae4-bdf7-b3c38f80958b",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}